rs/client-gen-js/tests/snapshots/generator__aliases_generation.snap
---
source: rs/client-gen-js/tests/generator.rs
expression: generated
---
import {GearApi, HexString} from "@gear-js/api";
import {TransactionBuilderWithHeader, TypeResolver} from "sails-js";
import {InterfaceId, SailsMessageHeader} from "sails-js-parser-idl-v2";

export class AliasesProgram {
    private _typeResolver: TypeResolver;
    constructor(
        public api: GearApi,
        private _programId?: `0x${string}`,
    ) {
        this._typeResolver = new TypeResolver([]);
    }

    private get registry() {
        return this._typeResolver.registry;
    }

    public get programId(): HexString {
        if (!this._programId) throw new Error("Program ID is not set");
        return this._programId;
    }

    public get aliases(): Aliases {
        return new Aliases(this.api, this.programId, 1);
    }
}

export interface MyStruct { f: number }

export type MyU32 = number;

export type MyStructAlias = MyStruct;

export type MyGeneric<T> = { ok: T } | { err: string };

export class Aliases {
    private _typeResolver: TypeResolver;
    constructor(
        private _api: GearApi,
        private _programId: HexString,
        private _routeIdx: number = 0,
    ) {
        this._typeResolver = new TypeResolver([{"name":"MyStruct","kind":"struct","fields":[{"name":"f","type":"u32"}]}, {"name":"MyU32","kind":"alias","target":"u32"}, {"name":"MyStructAlias","kind":"alias","target":{"kind":"named","name":"MyStruct"}}, {"name":"MyGeneric","type_params":[{"name":"T"}],"kind":"alias","target":{"kind":"named","name":"Result","generics":[{"kind":"generic","name":"T"},"String"]}}]);
    }
    private get registry() {
        return this._typeResolver.registry;
    }
    public get interfaceId(): InterfaceId {
        return InterfaceId.from("0xabf8eaeb33812727");
    }
    public doSomething(p: MyU32): TransactionBuilderWithHeader<MyStructAlias> {
        return new TransactionBuilderWithHeader<MyStructAlias>(
            this._api,
            this.registry,
            "send_message",
            SailsMessageHeader.v1(this.interfaceId, 0, this._routeIdx),
            p,
            this._typeResolver.getTypeDeclString({"kind":"named","name":"MyU32"}),
            this._typeResolver.getTypeDeclString({"kind":"named","name":"MyStructAlias"}),
            this._programId,
        );
    }

    public gen(): TransactionBuilderWithHeader<MyGeneric<number>> {
        return new TransactionBuilderWithHeader<MyGeneric<number>>(
            this._api,
            this.registry,
            "send_message",
            SailsMessageHeader.v1(this.interfaceId, 1, this._routeIdx),
            null,
            null,
            this._typeResolver.getTypeDeclString({"kind":"named","name":"MyGeneric","generics":["u32"]}),
            this._programId,
        );
    }
}
